// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > can configure a wider max width 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-jlZhew gqRxOR ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-cPiKLX dzQCTS"
  >
    Do you want to do the thing?
  </div>
</div>
`;

exports[`Modal > can configure fullscreen 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-jlZhew jakLHR ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-cPiKLX fLrXtF"
  >
    Do you want to do the thing?
  </div>
</div>
`;
